# algotrade5

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_ANALYSIS.md  AlgoTradPro5.code-workspace  CONTRIBUTING.md  Dockerfile  Dockerfile.custom  Dockerfile.freqai  Dockerfile.freqai-custom  GPU_SETUP.md  INTEGRATION_GUIDE.md  NEXT_STEPS.md  README.md  architecture-analysis.md  build.ps1  checkContext.ps1  code_cleaner.py  code_cleaner_report.txt  code_cleaner_report1.txt  code_cleaner_requirements.txt  config_manager.py  configure_cuda.py  continuous_backtester.py  copilot_interface.md  data_manager.py  dependency_cache.json  dependency_manager.json  dependency_manager.py  doc_validator.py  docker-compose.analysis.yml  docker-compose.override.yml  docker-compose.yml  environment.yml  error_manager.py  git_diff_changes.txt  gpu_metrics.json  gpu_monitor.py  initialize_system.py  (+30 more)
.github/: copilot-instructions.md  settings.json
.github/workflow/: ci.yml
.husky/: pre-commit
archive/src/: ai_model_manager.py
archive/strategies/: QuantumHybridStrategy.py  QuantumLoopStrategy.py  quantum_hybrid_strategy.py  quantum_simple_strategy.py
code_backup_20250323_113145/: code_cleaner.py  vulture_cleanup.py
code_backup_20250323_113145/freqtrade/: download_data.py  verify_models.py
code_backup_20250323_113145/scripts/: cache_dependencies.py  install_hooks.py  update_docs.py
code_backup_20250323_113145/src/: install_pre_commit.py  test_pre_commit.py
code_backup_20250323_114156/scripts/: watch_manifest.py
code_backup_20250323_114156/src/: freqai_service.py  test_hook.py
code_backup_20250323_115524/code_backup_20250323_114156/: vulture_cleanup.py
config/: .doc_cache.json
continuity_logs/: continuity_log_20250317_211715.md  continuity_log_20250317_220155.md
core/models/: freqai_interface.py
docker/: buildkitd.toml  daemon.json
docker/base/: Dockerfile.base
extensions/copilot-manifest-header/: package.json
freqai/: __init__.py
frontend/: .babelrc  .gitignore  Dockerfile  FRONTEND_DEV_PLAN.md  FRONTEND_MANIFEST.md  INTEGRATION_PLAN.md  TESTING_OPTIMIZATIONS.md  dev-context.json  index.html  jest.config.js  jest.setup.js  middleware.ts  next.config.js  package.json  tailwind.config.ts  tsconfig.dev.json  tsconfig.test.json
frontend/app/: ClientLayout.tsx  layout.tsx  page.tsx
frontend/components/: ErrorBoundary.tsx
frontend/scripts/: check-dependencies.ts  verify-config.ts
frontend/src/: App.tsx  providers.tsx  theme.ts
scripts/: cache_dependencies.py  install_hooks.py  manage_dependencies.py  run_precommit_checks.cmd  setup-hooks.ps1  setup_buildx.ps1  setup_docker_cache.ps1  setup_python_path.ps1  test_freqai.py  update_docs.py  watch_manifest.py
sql/: init.sql
src/: ai_model_manager.py  automation.py  dependency_manager.py  freqai_interface.py  freqai_service.py  initialize_system.py  install_pre_commit.py  pre_commit_hook.py  quantum_loop_optimizer.py  task_manager.py  test_hook.py  test_pre_commit.py
src/api/: ai_control.py  health_check.py  main.py  ml_control.py  system_metrics.py  trading_control.py
src/backend/: websocket_server.py
src/components/: ErrorBoundary.tsx
src/core/: ai_model_manager.py  cache_config.py  cache_manager.py  config_manager.py  continuous_backtester.py  data_manager.py  (+11 more)
strategies/: QuantumFreqAIStrategy.py  QuantumLoopStrategy.py
tests/: test_llm_feedback.py  test_quantum_loop_optimizer.py  test_websocket.py
(+965 files in other folders)
