[tool.poetry]
name = "algotradpro5"
version = "2025.2.0"
description = "Quantum-enhanced AI trading system with FreqTrade integration"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.26.4"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
torch = {version = "^2.2.0", source = "pytorch"}
pennylane = "^0.35.1"
qiskit = "^0.45.1"
tensorboard = "^2.16.2"
matplotlib = "^3.8.3"
# Fixed version for compatibility
httpx = "0.25.2"
python-dotenv = "^1.0.1"
ccxt = "^4.3.24"
SQLAlchemy = "^2.0.6"
python-telegram-bot = "^20.1"
# Using pandas-ta and technical instead of TA-Lib
pandas-ta = "^0.3.0"
technical = "^1.5.0"
tabulate = "^0.9.0"
pycoingecko = "^3.2.0"
python-rapidjson = "^1.20"
jinja2 = "^3.1.6"
jsonschema = "^4.23.0"
fastapi = "^0.115.11"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
websockets = "^15.0"
janus = "^2.0.0"
aiofiles = "^24.1.0"
psutil = "5.9.8"
py_find_1st = "^1.1.7"
schedule = "^1.2.2"
questionary = "^2.0.0"
prompt-toolkit = "^3.0.50"
python-dateutil = "^2.9.0"
orjson = "^3.10.15"
sdnotify = "^0.3.2"
rich = "^13.9.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.2.0"
isort = "^5.13.2"
mypy = "^1.8.0"
ruff = "^0.2.2"

[tool.poetry.group.jupyter]
optional = true

[tool.poetry.group.jupyter.dependencies]
jupyterlab = "^4.1.2"
nbstripout = "^0.6.1"
ipykernel = "^6.29.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 88
target-version = "py310"