[project]
name = "algotradepro5"
version = "0.1.0"
description = "AI-driven cryptocurrency trading system"
authors = [
    {name = "GitHub Copilot", email = "copilot@github.com"}
]
requires-python = ">=3.9"
license = {file = "LICENSE"}
readme = "README.md"

dependencies = [
    "freqtrade>=3.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "torch>=2.0.0",
    "pandas-ta>=0.3.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
llm = [
    "transformers>=4.36.0",
    "accelerate>=0.25.0",
    "sentencepiece>=0.1.99",
    "protobuf>=4.25.0",
    "einops>=0.7.0",
    "safetensors>=0.4.0",
]

quantum = [
    "qiskit>=0.45.0",
    "pennylane>=0.33.0",
    "cirq>=1.2.0",
]

dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["setuptools>=65.0.0", "wheel>=0.40.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["algotradepro5"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ["py39"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
